Update Mac setup.